# dvc-lab

./: .gitignore  README.md  dvc.yaml  params.yaml  pyproject.toml  summary.json
.dvc/: config
.github/workflows/: critique.yml  ct.yml
data/: .gitignore  MOCK_DATA.csv.dvc  shapefiles.dvc
pipeline/: config.py  create_dataset.py  create_features.py  evaluate_model.py  prepare.py  train_model.py
utils/: utils.py
