[tool.poetry]
name = "dvc-lab"
version = "0.1.0"
description = ""
authors = ["augustovictor <victor.costa@loft.com.br>"]

[tool.poetry.dependencies]
python = "^3.9"
dvc = { "version"= "^2.3.0", "extras"=["gdrive"] }
scikit-learn = "^0.24.2"
pandas = "^1.2.4"
gdown = "^3.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
